--- a/PrimeTutorial/PrimeTutorial.csproj
+++ b/PrimeTutorial/PrimeTutorial.csproj
@@ -42,6 +42,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calibrator.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
