Move calibrator and driver into functional blocks namespace

--- a/PrimeTutorial/PrimeTutorial.csproj
+++ b/PrimeTutorial/PrimeTutorial.csproj
@@ -42,11 +42,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calibrator.cs" />
     <Compile Include="Core\Data\ManipulatorAngles.cs" />
     <Compile Include="Core\Data\ManipulatorPosition.cs" />
     <Compile Include="Core\Data\ManipulatorSignals.cs" />
-    <Compile Include="Driver.cs" />
+    <Compile Include="Core\FunctionalBlocks\Calibrator.cs" />
+    <Compile Include="Core\FunctionalBlocks\Driver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
