--- a/PrimeTutorial/PrimeTutorial.csproj
+++ b/PrimeTutorial/PrimeTutorial.csproj
@@ -35,8 +35,12 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\Prime\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +54,13 @@
     <Compile Include="Core\Data\ManipulatorSignals.cs" />
     <Compile Include="Core\FunctionalBlocks\Calibrator.cs" />
     <Compile Include="Core\FunctionalBlocks\Driver.cs" />
+    <Compile Include="Core\FunctionalBlocks\ManipulatorEmulator.cs" />
+    <Compile Include="Core\Forms\ManipulatorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Core\Forms\ManipulatorForm.Designer.cs">
+      <DependentUpon>ManipulatorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FunctionalBlocks\DriverTest.cs" />
@@ -62,6 +73,11 @@
       <Project>{12e65f04-c271-4707-a380-1e98b8b078be}</Project>
       <Name>OptimusPrime</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Core\Forms\ManipulatorForm.resx">
+      <DependentUpon>ManipulatorForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
