--- a/PrimeTutorial/PrimeTutorial.csproj
+++ b/PrimeTutorial/PrimeTutorial.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Core\Forms\ManipulatorForm.Designer.cs">
       <DependentUpon>ManipulatorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Demos\Demo01.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FunctionalBlocks\DriverTest.cs" />
