Implement demo for manual linking blocks

--- a/PrimeTutorial/PrimeTutorial.csproj
+++ b/PrimeTutorial/PrimeTutorial.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>ManipulatorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Demos\Demo01.cs" />
+    <Compile Include="Demos\Demo02.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FunctionalBlocks\DriverTest.cs" />
