--- a/PrimeTutorial/PrimeTutorial.csproj
+++ b/PrimeTutorial/PrimeTutorial.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -85,6 +86,7 @@
     <Compile Include="Core\FunctionalBlocks\SimpleDwmDriver.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Core\Repeaters\DwmRepeater.cs" />
     <Compile Include="Demos\Demo01.cs" />
     <Compile Include="Demos\Demo02.cs" />
     <Compile Include="Demos\Demo03.cs" />
